tests/snapshots/run_wpt_conformance__litert_clamp_float32_1D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "clamp float32 1D constant tensor default options",
    "litert",
    "PASS",
)
